--- a/About.html
+++ b/About.html
@@ -23,22 +23,30 @@
             </div>
         </nav>
         <div>
+            <div class="left-sidebar"></div>
+            <div class="row">
+                <div class="left-col"></div>
+                <img src="./Assets//Family Small.jpeg">
+                <div class="right-col"></div>
+                <div>
+                    <h1> About me
+                    </h1>
 
-            <h1> About me
-            </h1>
 
+                    <h2> </h2>
 
-            <h2> Hi there I am Janet! Nice to meet you.</h2>
-
-            <h3> Hi there and welcome to my page. My name is Janet Jacobo. I am a mother of two amazing kids. I am
-                pursuing a career in Software Development.
-                I am open-minded, goal oriented, and resourceful. I also have a deep love of learning and insatiable
-                curiosity.
-                As a business oriented person I know the importance for companies and people to market themselves and
-                the services they offer,
-                giving them the opportunity to to cultivate experiences and long lasting relationships.</h3>
-        </div>
-    </div>
+                    <h3> Hi there and welcome to my page. My name is Janet Jacobo. I am a mother of two amazing kids. I
+                        am
+                        pursuing a career in Software Development.
+                        I am open-minded, goal oriented, and resourceful. I also have a deep love of learning and
+                        insatiable
+                        curiosity.
+                        As a business oriented person I know the importance for companies and people to market
+                        themselves and
+                        the services they offer,
+                        giving them the opportunity to to cultivate experiences and long lasting relationships.</h3>
+                </div>
+            </div>
 </body>
 
 </html>
